--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
-<div class="site-navigation">
-  <div class="inner">
-    <a class="logo" href="{{ site.baseurl }}/">Jekyll Boilerplate</a>
-    <a class="mobile-toggle" href="{{ site.baseurl }}/"><i class="fa fa-bars"></i></a>
-    <ul class="nav">
-        <li><a href="{{ site.baseurl }}/content-page">Content Page</a></li>
-    </ul>
-  </div>
-</div>
+{% comment %}
+<header class="header cm-site-header">
+    <div class="row">
+        <div class="column sm-one-forth">&nbsp;</div>
+        <div class="logo column sm-one-half"><a href="/"><span class="nav-icon logo-img">Channel Master</span><em>Styleguide 2018</em></a></div>
+    </div>
+</header>
+{% endcomment %}
