--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 <!-- Favicons & Facebook sharing -->
 <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/favicon-152.png">
-<meta name="msapplication-TileColor" content="#213553">
+<meta name="msapplication-TileColor" content="#000">
 <meta name="msapplication-TileImage" content="{{ site.baseurl }}/favicon-144.png">
 
 <meta property="og:title" content="" />
@@ -35,30 +35,18 @@
 <![endif]-->
 
 {% include header.html %}
-
-{% if page.title != "Home" %}
-<div class="page-header">
-  <div class="inner">
-    <h1>{{page.title}}</h1>
-  </div>
+<div class="navigation">
+  <div class="logo"><a href="/"><span class="nav-icon logo-img">Channel Master</span><em>Styleguide 2018</em></a></div>
+  {% include nav-side.html %}
 </div>
-{% endif %}
-{% if page.title == "Home" %}
-{% include home-hero.html %}
-{% endif %}
 
 <div class="content">
-{{ content }}
+  <div class="content__main">
+  {{ content }}
+  </div>
 </div>
 
 {% include footer.html %}
-
-<div class="site-design">
-  <a class="made-in-az" href="http://www.kristenzirkler.com">
-    <i class="kz-icon kz-icon-arizona"></i><i class="kz-icon kz-icon-heart-empty"></i>
-    <span>Crafted in AZ <strong>by Kristen Zirkler</strong></span>
-  </a>
-</div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
