--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,287 +1,458 @@
 /*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
-
-html,
-button,
-input,
-select,
-textarea {
-    color: #222;
+// @file
+// Default styling of html elements.
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
-html {
-    font-size: 1em;
-    line-height: 1.4;
+* {
+  // Universal transitions
+  transition-duration: 0.2s;
+  transition-property: background-color, border-color, box-shadow, color, opacity, text-shadow, transform;
+  transition-timing-function: linear;
 }
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-.cf:after {
-     visibility: hidden;
-     display: block;
-     font-size: 0;
-     content: " ";
-     clear: both;
-     height: 0;
-     }
-.cf { display: inline-block; }
-/* start commented backslash hack \*/
-* html .cf { height: 1%; }
-.cf { display: block; }
-/* close commented backslash hack */
 
 a {
-    outline: none;
-}
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+  // Improves readability when focused.
+  outline-offset: em(2px);
+  -webkit-text-decoration-skip: objects;
+
+  &:active,
+  &:hover {
+    outline: 0;
+  }
+
+  &:hover,
+  &:focus {
+  }
 }
 
-audio,
-canvas,
-img,
-video {
-    vertical-align: middle;
+abbr {
+  &[title] {
+    border-bottom: none;
+    text-decoration: underline;
+    text-decoration: underline dotted;
+  }
+
+  &:hover {
+    cursor: help;
+  }
 }
+
+address {}
+
+article {}
+
+aside {}
+
+audio {
+  &:not([controls]) {
+    display: none;
+    height: 0;
+  }
+}
+
+b {}
+
+blockquote {
+  margin: 0 1.5em $spacing--vertical;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  word-wrap: break-word;
+}
+
+// Don’t style button elements, since they’re often styled as links for
+// accessible widgets. Use the .button class in partials/components/buttons.
+button {
+  overflow: visible;
+}
+
+canvas {
+  display: inline-block;
+}
+
+caption {
+  margin-bottom: ($spacing--vertical / 2);
+}
+
+cite {}
+
+code {}
+
+col {}
+
+colgroup {}
+
+datalist {}
+
+dd {
+  margin-bottom: $spacing--vertical;
+}
+
+del {}
+
+details {}
+
+dfn {
+  font-style: italic;
+}
+
+dl {
+  margin: 0 0 $spacing--vertical;
+}
+
+dt {}
+
+em {}
+
+embed {}
 
 fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+figcaption {}
+
+figure {
+  margin: 0 0 $spacing--vertical;
+}
+
+footer {}
+
+form {}
+
+header {}
+
+hr {
+  border: 1px solid $color--border;
+  box-sizing: content-box;
+  height: 0;
+  margin: $spacing--vertical 0;
+  padding-bottom: -1px;
+}
+/*
+html {
+  @extend %base-font-family;
+  box-sizing: border-box;
+  font-size: 100% * ($base-font-size / 16px);
+  line-height: $base-line-height;
+  min-height: 100%;
+  text-size-adjust: 100%;
+}
+*/
+i {}
+
+iframe {
+  border: 0;
+}
+
+img {
+  border: 0;
+  font-style: italic; // Makes alt text stand out from surrounding text.
+  height: auto;
+  max-width: 100%;
+}
+
+// Don't style button, submit, or reset elements, since they're often styled as
+// links for accessible widgets. Use the .button class in
+// partials/components/buttons.
+input {
+  line-height: normal;
+}
+
+input[type='button'] {}
+input[type='checkbox'] {}
+input[type='color'] {}
+input[type='date'] {}
+input[type='datetime'] {}
+input[type='datetime-local'] {}
+input[type='email'] {}
+input[type='file'] {}
+input[type='image'] {}
+input[type='month'] {}
+input[type='number'] {}
+input[type='password'] {}
+input[type='radio'] {}
+input[type='range'] {}
+input[type='reset'] {}
+input[type='search'] {}
+input[type='submit'] {}
+input[type='tel'] {}
+input[type='text'] {}
+input[type='time'] {}
+input[type='url'] {}
+input[type='week'] {}
+
+ins {}
+
+kbd {}
+
+label {}
+
+legend {
+  border: 0;
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  margin: 0;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+li {
+  margin-bottom: ($spacing--vertical / 2);
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+main {}
+
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+menu {}
+
+menuitem {}
+
+meter {}
+
+nav {}
+
+object {}
+
+ol {
+  margin: 0 0 $spacing--vertical;
+  padding: 0 0 0 1.5em; // LTR
+/*
+  @if $support-for-rtl {
+    [dir='rtl'] & {
+      padding: 0 1.5em 0 0;
+    }
+  }
+*/
+  ol,
+  ul {
+    margin: ($spacing--vertical / 2) 0 0;
+  }
+}
+
+optgroup {
+  font-weight: bold;
+}
+
+option {}
+
+output {}
+
+p {
+  margin: 0 0 $spacing--vertical;
+}
+
+param {}
+
+pre {
+  margin: 0 0 $spacing--vertical;
+  overflow: auto;
+}
+
+progress {}
+
+q {}
+
+s {}
+
+samp {}
+
+section {}
+
+select {}
+
+small {
+  font-size: 12px;
+}
+
+strong {}
+
+sub {
+  bottom: -0.25em;
+}
+
+summary {
+  display: list-item;
+}
+
+sup {
+  top: -0.5em;
+}
+
+svg {
+  &:not(:root) {
+    overflow: hidden;
+  }
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin-bottom: $spacing--vertical;
+  min-width: 100%;
+}
+
+tbody {}
+
+td {
+  border: 1px solid $color--border;
+  padding: ($spacing--vertical/2);
 }
 
 textarea {
-    resize: vertical;
+  overflow: auto;
 }
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+tfoot {
+  td,
+  th {
+    background-color: #eee;
+  }
 }
 
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-
+th {
+  border: 1px solid $color--border;
+  padding: ($spacing--vertical/2);
+  text-align: left;
 }
 
-@media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
-
+thead {
+  td,
+  th {
+    background-color: #eee;
+  }
 }
 
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
+time {}
 
-.ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
-    *text-indent: -9999px;
-}
+tr {}
 
-.ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
-}
+u {}
 
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-.invisible {
-    visibility: hidden;
-}
-
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-
-@media print {
-    * {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
+ul {
+  list-style-type: disc;
+  margin: 0 0 $spacing--vertical;
+  padding: 0 0 0 1.2em; // LTR
+/*
+  @if $support-for-rtl {
+    [dir='rtl'] & {
+      padding: 0 1.2em 0 0;
     }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    .ir a:after,
-    a[href^="javascript:"]:after,
-    a[href^="#"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    @page {
-        margin: 0.5cm;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
-
-/* CSS Reset */
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
+  }
 */
+  ol,
+  ul {
+    margin: ($spacing--vertical / 2) 0 0;
+  }
+}
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
+var {}
+
+video {}
+
+// Default print styles.
+@media print {
+  * {
+    background-color: transparent !important;
+    box-shadow: none !important;
+    color: #000 !important;
+    text-shadow: none !important;
+  }
+
+  a,
+  a:visited {
+    text-decoration: none;
+  }
+/*
+  a[href]::after {
+    font-family: $base-font-family;
+    content: ' <' attr(href) '>';
+    font-size: 10pt;
+    font-weight: normal;
+    text-transform: lowercase;
+  }
+
+  // Uncomment and replace example.com with your site’s domain.
+  //a[href^='/']::after {
+  //  content: ' <http://example.com' attr(href) '>';
+  //}
+
+  a[href^='javascript:']::after,
+  a[href^='mailto:']::after,
+  a[href^='tel:']::after,
+  a[href^='#']::after,
+  a[href*='?']::after {
     content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  }
+*/
+  abbr[title]::after {
+    content: ' (' attr(title) ')';
+  }
+
+  blockquote,
+  img,
+  li,
+  pre,
+  tr {
+    page-break-inside: avoid;
+  }
+
+  h1 a::after,
+  h2 a::after,
+  h3 a::after,
+  h4 a::after,
+  h5 a::after,
+  h6 a::after {
+    display: inline-block;
+  }
+
+  h2,
+  h3,
+  h4 {
+    page-break-after: avoid;
+  }
+
+  h2,
+  h3,
+  h4,
+  p {
+    orphans: 3;
+    widows: 3;
+  }
+
+  iframe,
+  nav {
+    display: none;
+  }
+
+  img {
+    max-width: 100% !important;
+  }
+
+  thead {
+    display: table-header-group;
+  }
+
+  @page {
+    margin: 2cm;
+  }
 }
