--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,27 +1,61 @@
+$brand-orange: #e98300;
+$brand-green: #8dc63f;
+
 $body-background: #fff;
 
 $page-background: $body-background;
 
-$main-color: #7dc52f;
+$main-color: $brand-orange;
 
-$white: #fff;
-$gray-lightest: #f5f4f2;
+$black: #000000;
+//$gray-darker: #2e2e2e;
+$gray-dark: #373736;//old #3f3f3e;
+$gray: #595958;
 $gray-light: #d4d4d2;
-$gray: #8d9095;
-$black: #000;
+$gray-lightest: #F0F0F0; //slide bg
+$white: #fff;
 
-$font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
-$accent-font: Arial, 'Lucida Grande', sans-serif;
+$highlight-background: #ffffb2; //light yellow
 
-$font-color: $black;
+$light-background: $gray-lightest; //#eeebe2; //tan
+
+$font-family: 'Heebo', Arial, sans-serif;
+$accent-font: 'Heebo', Arial, sans-serif;
+
+$font-color: #333;
+$link: #1D88D7;
 $link: $main-color;
+$link-hover: lighten($link,8);
+$error: #dd2a00;
+$success: #5bad29;
 
-$error: #d92424;
-
-$page-size: 960px;
+$page-size: 1000px;
+$category-page-size: 940px;
 
 $desktop-side-space: 20px;
 $mobile-side-space: 30px;
+
+$button-color: $main-color;
+$button-hover: lighten($main-color,8);
+$button-secondarycolor: $gray;
+$button-secondaryhover: lighten($gray,8);
+
+$border-color: $gray-light;
+$field-height: 40px;
+
+$z-index-nav: 1000;
+$z-index-modal: 1010;
+
+$desktop-side-space: 20px;
+$mobile-side-space: 30px;
+
+
+
+$spacing--vertical: 16px;
+$color--border: $border-color;
+
+
+
 
 @mixin transition($transitions) {
     -webkit-transition: $transitions;
@@ -43,12 +77,12 @@ $mobile-side-space: 30px;
   transform:         $variables;
 }
 @mixin gradient($start,$start-opacity,$stop,$stop-opacity) {
-	background: $start;
-	background: -moz-linear-gradient(top,  rgba($start,$start-opacity) 0%, rgba($stop,$stop-opacity) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba($start,$start-opacity)), color-stop(100%,rgba($stop,$stop-opacity))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba($start,$start-opacity) 0%,rgba($stop,$stop-opacity) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba($start,$start-opacity) 0%,rgba($stop,$stop-opacity) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba($start,$start-opacity) 0%,rgba($stop,$stop-opacity) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba($start,$start-opacity) 0%,rgba($stop,$stop-opacity) 100%); /* W3C */
-	//filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+  background: $start;
+  background: -moz-linear-gradient(top,  rgba($start,$start-opacity) 0%, rgba($stop,$stop-opacity) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba($start,$start-opacity)), color-stop(100%,rgba($stop,$stop-opacity))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba($start,$start-opacity) 0%,rgba($stop,$stop-opacity) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba($start,$start-opacity) 0%,rgba($stop,$stop-opacity) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba($start,$start-opacity) 0%,rgba($stop,$stop-opacity) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba($start,$start-opacity) 0%,rgba($stop,$stop-opacity) 100%); /* W3C */
+  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
 }
