--- a/scss/site-frame.scss
+++ b/scss/site-frame.scss
@@ -1,122 +1,95 @@
-$nav-height: 60px;
-$footer-height: 50px;
-
-
-// You can use url($baseurl+'/img/sitebg.jpg'); because it is added in style.scss
-body {
-	margin-top: $nav-height;
+$nav-height: 50px;
+$nav-width: 240px;
+$mobile-nav-width: 200px;
+$nav-menu-icon-size: 24px;
+$main-nav-background: $main-color;
+/*
+.cm-site-header {
+  height: $nav-height;
+  background: $black;
+  .logo {
+    text-align: center;
+    a {
+      line-height: $nav-height;
+      display: block;
+    width: 290px;
+    margin: 0 auto;
+    }
+    span {
+      margin: 12px auto 0;
+      float: left;
+    }
+    em {
+      line-height: $nav-height+5;
+      display: inline-block;
+      text-decoration: none;
+      font-size: 20px;
+      font-weight: bold;
+      color: $white;
+      float: left;
+      margin-left: 10px;
+    }
+  }
+}*/
+.nav-icon {
+  display: inline-block;
+  //background-image: url(/downloads/Images/nav-icons-v3.png);
+  background-image: url(https://downloads.channelmaster.com/Images/nav-icons-v3.png);
+  background-size: 200px 187px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  text-indent: -50000px;
+  &.logo-img {
+    width: 130px;
+    height: 25px;
+    background-position: 0 0;
+  }
+  &.icon-cm {
+    width: 50px;
+    height: 50px;
+    background-position: 0 -26px;
+  }
 }
-
-.site-navigation {
-	@include transition(all 1s);
-	background: #fff;
-	box-shadow: 0 0 10px rgba(#000,.3);
-
-	position: fixed;
-	top: 0; left: 0; right: 0;
-	z-index: 100;
-	a {
-		color: $main-color;
-	}
-	.logo {
-		display: inline-block;
-		float: left;
-		margin: 8px 10px 0;
-		//line-height: $nav-height;
-		//font-family: $accent-font;
-		//text-transform: uppercase;
-		//font-size: 1.5em;
-		img {
-			width: 200px;
-		}
-	}
-	.mobile-toggle {
-		float: right;
-		border: 1px solid $main-color;
-		display: inline-block;
-		margin: 5px 10px;
-		border-radius: 50%;
-		width: $nav-height - 10;
-		height: $nav-height - 10;
-		text-align: center;
-		i {
-			padding: 0 .5em;
-			font-size: 1.3em;
-			line-height: $nav-height - 10;
-		}
-	}
-	ul {
-		display: block;
-		clear: both;
-		text-align: center;
-		display: none;
-		@include transition(all 1s);
-	}
-	li {
-		font-size: 1.1em;
-		font-family: $accent-font;
-		line-height: $nav-height;
-		border-top: 1px solid $gray-lightest;
-	}
+.navigation {
+  width: $nav-width;
+  position: fixed;
+  top: 0; bottom: 0;
+  left: 0;
+  background: $black;
+  padding: 20px;
+  .logo {
+    a {
+      display: block;
+    }
+    em {
+      display: block;
+      font-size: 16px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: $white;
+    }
+  }
+  a {
+    text-decoration: none;
+  }
+  h3, h3 a {
+    color: $white;
+    font-weight: bold;
+    font-size: 18px;
+    margin: 0;
+  }
+  h3 {
+    margin-top: 20px;
+  }
 }
-.footer {
-	background: $main-color;
-	color: #fff;
-	overflow: hidden;
-
-	a {
-		color: #fff;
-	}
-	.logo {
-		display: inline-block;
-		float: left;
-		margin: 0 20px;
-		line-height: $nav-height;
-		font-family: $accent-font;
-		text-transform: uppercase;
-		font-size: 1.5em;
-	}
+.content {
+  max-width: $page-size - $nav-width;
+  margin: 0 0 0 $nav-width;
+  padding-left: 40px;
 }
+.content__aside {
 
-
-
-.hide {
-	opacity: 0;
 }
-.show {
-	opacity: 1;
-}
-
-// Responsive
-@media all and (min-width: 420px) {
-// Tablet & Up
-
-// End Tablet & Up
-}
-
-@media all and (min-width: 800px) {
-// Desktop & Up
-
-	.site-navigation {
-		.mobile-toggle {
-			display: none;
-		}
-		.nav {
-			display: inline-block;
-			clear: none;
-
-			float: right;
-			overflow: hidden;
-			line-height: $nav-height;
-			margin: 0 20px;
-			li {
-				display: inline-block;
-				margin: 0 .5em;
-				border-top: none;
-			}
-
-		}
-	}
-
-// End Desktop & Up
+.content__main {
+  
 }
