--- a/_includes/nav-side.html
+++ b/_includes/nav-side.html
@@ -1,16 +1,16 @@
 <div class="ui-kit__navigation">
-	<h3><a href="/">Brand<a></h3>
-	<div><a href="/#cm-logo">Channel Master Logo</a></div>
-	<div><a href="/#cm-symbol">Channel Master Symbol</a></div>
-	<div><a href="/#cm-colors">Brand Colors</a></div>
-	<div><a href="/#cm-fonts">Brand Fonts</a></div>
+	<h3><a href="{{ site.baseurl }}/">Brand<a></h3>
+	<div><a href="{{ site.baseurl }}/#cm-logo">Channel Master Logo</a></div>
+	<div><a href="{{ site.baseurl }}/#cm-symbol">Channel Master Symbol</a></div>
+	<div><a href="{{ site.baseurl }}/#cm-colors">Brand Colors</a></div>
+	<div><a href="{{ site.baseurl }}/#cm-fonts">Brand Fonts</a></div>
 
-	<h3><a href="web.html">Web & Emails</a></h3>
-	<div><a href="web.html#web-fonts">Fonts</a></div>
-	<div><a href="web.html#web-colors">Colors</a></div>
-	<div><a href="web.html#web-buttons">Buttons & Fields</a></div>
-	<div><a href="web.html#web-grid">Grid</a></div>
-	<div><a href="web.html#web-product-box">Product Box</a></div>
+	<h3><a href="{{ site.baseurl }}/web.html">Web & Emails</a></h3>
+	<div><a href="{{ site.baseurl }}/web.html#web-fonts">Fonts</a></div>
+	<div><a href="{{ site.baseurl }}/web.html#web-colors">Colors</a></div>
+	<div><a href="{{ site.baseurl }}/web.html#web-buttons">Buttons & Fields</a></div>
+	<div><a href="{{ site.baseurl }}/web.html#web-grid">Grid</a></div>
+	<div><a href="{{ site.baseurl }}/web.html#web-product-box">Product Box</a></div>
 
-	<h3><a href="print.html">Print & Packaging</a></h3>
+	<h3><a href="{{ site.baseurl }}/print.html">Print & Packaging</a></h3>
 </div>
