--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
 {% include header.html %}
 <div class="navigation">
-  <div class="logo"><a href="/"><span class="nav-icon logo-img">Channel Master</span><em>Styleguide 2018</em></a></div>
+  <div class="logo"><a href="{{ site.baseurl }}/"><span class="nav-icon logo-img">Channel Master</span><em>Styleguide 2018</em></a></div>
   {% include nav-side.html %}
 </div>
 
