Add product logos and production logos

--- a/_includes/nav-side.html
+++ b/_includes/nav-side.html
@@ -4,6 +4,8 @@
 	<div><a href="{{ site.baseurl }}/#cm-symbol">Channel Master Symbol</a></div>
 	<div><a href="{{ site.baseurl }}/#cm-colors">Brand Colors</a></div>
 	<div><a href="{{ site.baseurl }}/#cm-fonts">Brand Fonts</a></div>
+	<div><a href="{{ site.baseurl }}/#cm-logos-product">Product Logos</a></div>
+	<div><a href="{{ site.baseurl }}/#cm-logos-other">Other Logos</a></div>
 
 	<h3><a href="{{ site.baseurl }}/web.html">Web & Emails</a></h3>
 	<div><a href="{{ site.baseurl }}/web.html#web-fonts">Fonts</a></div>
