--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,7 +10,7 @@ $main-color: $brand-orange;
 $black: #000000;
 //$gray-darker: #2e2e2e;
 $gray-dark: #373736;//old #3f3f3e;
-$gray: #595958;
+$gray: #8b8b8a; //old 595958;
 $gray-light: #d4d4d2;
 $gray-lightest: #F0F0F0; //slide bg
 $white: #fff;
