--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 {% comment %}
-<header class="header cm-site-header">
+<!--header class="header cm-site-header">
     <div class="row">
         <div class="column sm-one-forth">&nbsp;</div>
-        <div class="logo column sm-one-half"><a href="/"><span class="nav-icon logo-img">Channel Master</span><em>Styleguide 2018</em></a></div>
+        <div class="logo column sm-one-half"><a href="/"><span class="nav-icon logo-img">{% include svg/channelmaster.svg %}</span><em>Styleguide 2018</em></a></div>
     </div>
-</header>
+</header-->
 {% endcomment %}
