--- a/_includes/patterns/logos.html
+++ b/_includes/patterns/logos.html
@@ -4,12 +4,19 @@
   <p class="ui-kit__desc">The Channel Master logo is always either white or black. It must be legible and maintain the integrity of its form.</p>
   <div class="ui-kit__example ui-kit__logos">
     <div class="ui-kit__logos--lightbg">
-      <img src="{{ site.baseurl }}/img/channel-master-logo.png" alt="Channel Master Logo" />
+      <div class="logo">{% include svg/channelmaster.svg %}</div>
       <p>Light backgrounds: Black Full Logo</p>
+      <p>Download: 
+        <a href="{{ site.baseurl }}/img/channel-master-logo.png" download="channelmaster-logo-black.png">PNG</a> | 
+        <a href="{{ site.baseurl }}/img/svg/channelmaster.svg" download="channelmaster-logo-black.svg">SVG</a>
+      </p>
     </div>
     <div class="ui-kit__logos--darkbg">
-      <img src="{{ site.baseurl }}/img/channel-master-logo-white.png" alt="Channel Master Logo White" />
+      <div class="logo logo--white">{% include svg/channelmaster.svg %}</div>
       <p>Dark backgrounds: White Full Logo</p>
+      <p>Download: 
+        <a href="{{ site.baseurl }}/img/channel-master-logo-white.png" download="channelmaster-logo-white.png">PNG</a>
+      </p>
     </div>
   </div>
 </div>
