--- a/_includes/nav-side.html
+++ b/_includes/nav-side.html
@@ -1,3 +1,5 @@
+<div class="logo"><a href="{{ site.baseurl }}/"><span class="logo logo--white">{% include svg/channelmaster.svg %}</span><em>Styleguide 2018</em></a></div>
+
 <div class="ui-kit__navigation">
 	<h3><a href="{{ site.baseurl }}/">Brand<a></h3>
 	<div><a href="{{ site.baseurl }}/#cm-logo">Channel Master Logo</a></div>
