--- a/scss/site-frame.scss
+++ b/scss/site-frame.scss
@@ -42,6 +42,7 @@ $main-nav-background: $main-color;
   }
   a {
     text-decoration: none;
+    color: $gray;
   }
   h3, h3 a {
     color: $white;
