--- a/html5-ads/cmad20180815.scss
+++ b/html5-ads/cmad20180815.scss
@@ -76,9 +76,6 @@ button, .button {
 		padding: 10px;
 		height: 68%;
 		z-index: 2;
-		//background-image: url(counter-bg.jpg);
-		//background-size: cover;
-		//background-position: left bottom;
 	}
 	.title {
 		color: $black;
@@ -122,7 +119,7 @@ button, .button {
 		position: absolute;
 		top: 20px; bottom: -20px;
 		left: 4px; right: 0;
-		background-image: url(counter-stream+.png);
+		background-image: url(cmad20180815stream.png);
 		background-size: contain;
 		background-position: right bottom;
 		background-repeat: no-repeat;
@@ -155,7 +152,7 @@ button, .button {
 		top: -8px; bottom: 0;
 		right: 0;
 		width: 50%;
-		background-image: url(stream-guide.jpg);
+		background-image: url(cmad20180815guide.png);
 		background-size: cover;
 		background-position: left top;
 	}
