updates based on coty feedback

--- a/_includes/patterns/cm-icon.html
+++ b/_includes/patterns/cm-icon.html
@@ -6,7 +6,7 @@
   <div class="ui-kit__example ui-kit__logos">
     <div class="ui-kit__logos--lightbg">
       <img src="{{ site.baseurl }}/img/channel-master-icon.png" alt="Channel Master Icon" />
-      <p>Light backgrounds: Black with White CM</p>
+      <p>Light backgrounds: Black with transparent CM</p>
     </div>
     <div class="ui-kit__logos--darkbg">
       <img src="{{ site.baseurl }}/img/channel-master-icon-white.png" alt="Channel Master Icon White" />
