--- a/_includes/patterns/logos-product.html
+++ b/_includes/patterns/logos-product.html
@@ -5,7 +5,7 @@
   <div class="ui-kit__example ui-kit__logos">
     <div class="ui-kit__logos--lightbg">
       <div class="logo-product">{% include svg/smartenna-plus-logo.svg %}</div>
-      <p>Light backgrounds: Gray & Orange</p>
+      <p>Light backgrounds: Black & Orange</p>
     </div>
     <div class="ui-kit__logos--darkbg">
       <div class="logo-product logo-product--darkbg">{% include svg/smartenna-plus-logo.svg %}</div>
@@ -15,7 +15,7 @@
   <div class="ui-kit__example ui-kit__logos">
     <div class="ui-kit__logos--lightbg">
       <div class="logo-product">{% include svg/stream-plus-logo.svg %}</div>
-      <p>Light backgrounds: Gray & Orange</p>
+      <p>Light backgrounds: Black & Orange</p>
     </div>
     <div class="ui-kit__logos--darkbg">
       <div class="logo-product logo-product--darkbg">{% include svg/stream-plus-logo.svg %}</div>
@@ -25,7 +25,7 @@
 </div>
 <style>
 .logo-product {
-  fill: #8b8b8a;
+  fill: #000;
 }
 .logo-product .plus {
   fill: #e98300;
