added png download

--- a/_includes/patterns/cm-icon.html
+++ b/_includes/patterns/cm-icon.html
@@ -7,6 +7,9 @@
     <div class="ui-kit__logos--lightbg">
       <img src="{{ site.baseurl }}/img/channel-master-icon.png" alt="Channel Master Icon" />
       <p>Light backgrounds: Black with transparent CM</p>
+      <p>Download: 
+        <a href="{{ site.baseurl }}/img/channel-master-icon.png" download="channel-master-icon.png">PNG</a>
+      </p>
     </div>
     <div class="ui-kit__logos--darkbg">
       <img src="{{ site.baseurl }}/img/channel-master-icon-white.png" alt="Channel Master Icon White" />
