--- a/_includes/patterns/base-fonts.html
+++ b/_includes/patterns/base-fonts.html
@@ -1,14 +1,14 @@
 <a name="web-fonts"></a>
 <div class="ui-kit">
   <h2 class="ui-kit__title">Base Fonts</h2>
-  <p class="ui-kit__desc">We use <a href="https://fonts.google.com/specimen/Heebo" targe="_blank">Heebo, a free Google Web Font,</a> for all headers and body copy. Tags for inline text elements are given default styles.</p>
+  <p class="ui-kit__desc">We use <a href="https://fonts.google.com/specimen/Roboto" targe="_blank">Roboto, a free Google Web Font,</a> for all headers and body copy. Tags for inline text elements are given default styles.</p>
   <div class="ui-kit__example">
     <p>Channel Master is the <strong>industry leader</strong> in over-the-air broadcast entertainment products and solutions for North America, providing the highest quality and value for <u>consumers since 1949</u>. Headquartered in Phoenix, Arizona, <em>our products are available</em> through more than 200 distributors and thousands of retail stores worldwide.</p>
   </div>
 </div>
 <div class="ui-kit">
   <h2 class="ui-kit__title">Headlines</h2>
-  <p class="ui-kit__desc">We use <a href="https://fonts.google.com/specimen/Heebo" targe="_blank">Heebo, a free Google Web Font,</a> for all headers and body copy.</p>
+  <p class="ui-kit__desc">We use <a href="https://fonts.google.com/specimen/Roboto" targe="_blank">Roboto, a free Google Web Font,</a> for all headers and body copy.</p>
   <div class="ui-kit__example">
     <h1>Headline Font is Large</h1>
     <h2>H2 font is a bit smaller</h2>
