--- a/_includes/patterns/brand-fonts.html
+++ b/_includes/patterns/brand-fonts.html
@@ -1,7 +1,7 @@
 <a name="cm-fonts"></a>
 <div class="ui-kit">
   <h2 class="ui-kit__title">Brand Font</h2>
-  <p class="ui-kit__desc">Final determination of Brand Font has not been established. We use <a href="https://fonts.google.com/specimen/Heebo" targe="_blank">Heebo, a free Google Web Font,</a> for all headers and body copy on channelmaster.com.</p>
+  <p class="ui-kit__desc">Final determination of Brand Font has not been established. We use <a href="https://fonts.google.com/specimen/Roboto" targe="_blank">Roboto, a free Google Web Font,</a> for all headers and body copy on channelmaster.com.</p>
   <div class="ui-kit__example">
     <h1>Headline Font is Large</h1>
     <h2>H2 font is a bit smaller</h2>
