--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,8 +19,8 @@ $highlight-background: #ffffb2; //light yellow
 
 $light-background: $gray-lightest; //#eeebe2; //tan
 
-$font-family: 'Heebo', Arial, sans-serif;
-$accent-font: 'Heebo', Arial, sans-serif;
+$font-family: 'Roboto', Arial, sans-serif;
+$accent-font: 'Roboto', Arial, sans-serif;
 
 $font-color: #333;
 $link: #1D88D7;
