--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -1,5 +1,5 @@
-// Heebo
-@import url('https://fonts.googleapis.com/css?family=Heebo:400,700');
+// Roboto
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 body {
   font-family: $font-family;
