--- a/html5-ads/cmad20180815.scss
+++ b/html5-ads/cmad20180815.scss
@@ -3,8 +3,8 @@
 @import 'variables';
 @import '_reset';
 
-// Heebo
-@import url('https://fonts.googleapis.com/css?family=Heebo:400,700');
+// Roboto
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 *,
 *::before,
