--- a/_includes/patterns/base-colors.html
+++ b/_includes/patterns/base-colors.html
@@ -1,7 +1,7 @@
 <a name="web-colors"></a>
 <div class="ui-kit">
   <h2 class="ui-kit__title">Colors</h2>
-  <p class="ui-kit__desc">We have three primary brand colors.</p>
+  <p class="ui-kit__desc">We have four primary brand colors.</p>
   {% include patterns/colors.html layout='web-main' %}
 
   <p class="ui-kit__desc">For consistency, we try to use these four grayscale values throughout our interfaces.</p>
